--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   localrunner-test:
-    runs-on: [ self-hosted, local ]
+    runs-on: [ self-hosted,]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
